@@ -4,9 +4,14 @@ fai (3.2.12) unstable; urgency=low
     preserved partition does not match the size specified in the
     disk_config; fail, if an extended partition is to be created in place
     of a to-be-preserved partition (closes: #501772)
+  * lib/setup-storage/Exec.pm: recent versions of parted log errors to
+    stdout instead of stderr + adaption of error messages to current ones
+    (closes: #500823)
+  * lib/setup-storage/Volumes.pm: Handle new error message in case of
+    missing disk label (closes: #500823)
   * make-fai-nfsroot: print version of debootstrap (closes: #500046)
 
- -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:29:21 +0200
+ -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:31:55 +0200
 
 fai (3.2.11) unstable; urgency=low
 
